syntax = "proto3";
package centauri.keyrotation.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "x/keyrotation/types";

// GenesisState defines the mint module's genesis state.
message GenesisState {}
