syntax = "proto3";
package centauri.keyrotation.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";

option go_package = "x/keyrotation/types";

// GenesisState defines the mint module's genesis state.
message ConsPubKeyRotationHistory {
    string operator_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
    google.protobuf.Any old_key = 2 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
    google.protobuf.Any new_key = 3 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
    uint64 block_height = 4;
}